Added validations for the all user management steps

--- a/app/views/admin/user_steps/_footer.html.erb
+++ b/app/views/admin/user_steps/_footer.html.erb
@@ -3,10 +3,16 @@
     <%= link_to 'Cancel', admin_users_path, class: 'c-button -outline -dark-text js-cancel' %>
     <div>
       <% if @user.id %>
-        <%= f.button Admin::SiteStepsController::CONTINUE, value: Admin::SiteStepsController::CONTINUE, type: 'submit', method: :put, class: 'c-button -outline -dark-text' %>
-        <%= f.button Admin::SiteStepsController::SAVE, value: Admin::SiteStepsController::SAVE, type: 'submit', method: :put, class: 'c-button' %>
+        <% if local_assigns[:finish] %>
+          <%= f.button Admin::UserStepsController::CONTINUE, value: Admin::UserStepsController::CONTINUE, type: 'submit', method: :put, class: 'c-button -outline -dark-text' %>
+        <% end %>
+        <%= f.button Admin::UserStepsController::SAVE, value: Admin::UserStepsController::SAVE, type: 'submit', method: :put, class: 'c-button' %>
       <% else %>
-        <%= f.button Admin::SiteStepsController::CONTINUE, value: Admin::SiteStepsController::CONTINUE, type: 'submit', method: :put, class: 'c-button' %>
+        <% if local_assigns[:finish] %>
+          <%= f.button Admin::UserStepsController::SAVE, value: Admin::UserStepsController::SAVE, type: 'submit', method: :put, class: 'c-button' %>
+        <% else %>
+          <%= f.button Admin::UserStepsController::CONTINUE, value: Admin::UserStepsController::CONTINUE, type: 'submit', method: :put, class: 'c-button' %>
+        <% end %>
       <% end %>
     </div>
   </div>
