--- a/app/views/admin/user_steps/contexts.html.erb
+++ b/app/views/admin/user_steps/contexts.html.erb
@@ -24,6 +24,6 @@
 
     </div>
   </div>
-  <%= render partial: 'footer', locals: { f: f} %>
+  <%= render partial: 'footer', locals: { f: f, finish: true} %>
 <% end %>
 <%= render partial: 'shared/errors', locals: { resource: @user } %>
