--- a/app/views/management/_extended_header.html.erb
+++ b/app/views/management/_extended_header.html.erb
@@ -5,7 +5,9 @@
         <ul class="action-buttons">
           <% if local_assigns[:type] == 'dataset' %>
             <li><%= link_to 'New dataset', new_management_site_dataset_step_path, class: 'c-button -outline' %></li>
-          <% else %>
+          <% elsif  local_assigns[:type] == 'widget' %>
+            <li><%= link_to 'New widget', new_management_site_widget_step_path, class: 'c-button -outline' %></li>
+        <% else %>
             <li><%= link_to 'New page', new_management_site_page_step_path, class: 'c-button -outline' %></li>
          <% end %>
           <% if @url.present? %><li><a href="<%= @url %>" class="c-button">Go to site</a></li><% end %>
