Fixed the first steps of widget creation

--- a/app/views/management/widget_steps/dataset.html.erb
+++ b/app/views/management/widget_steps/dataset.html.erb
@@ -27,8 +27,8 @@
           <% datasets.each do |dataset| %>
             <div class="card">
               <label for="dataset-<%= dataset.id %>"><%= dataset.name %></label>
-              <%= radio_button_tag 'site_page[dataset_setting][context_id_dataset_id]', \
-                  [context_id.to_s, dataset.id], f.object.dataset_setting ? (f.object.dataset_setting.dataset_id == dataset.id) : nil, id: 'dataset-' + dataset.id %>
+              <%= radio_button_tag 'widget[dataset_id]', \
+                  dataset.id, f.object.dataset_id ? (f.object.dataset_id == dataset.id) : nil, id: 'dataset-' + dataset.id %>
               <div class="content">
                 <h3><%= dataset.name %></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
