--- a/app/views/management/widget_steps/title.html.erb
+++ b/app/views/management/widget_steps/title.html.erb
@@ -15,7 +15,7 @@
     <div class="wrapper">
       <div class="inputs-container">
         <%= f.label :title, for: 'title' %>
-        <%= f.text_field :name, id:'name', placeholder: 'Widget\’s title' %>
+        <%= f.text_field :name, id:'name', placeholder: 'Widget\'s title' %>
 
         <%= f.label :description, for: 'description' %>
         <%= f.text_field :description, id:'description', placeholder: 'Widget\'s description' %>
