--- a/app/views/management/widget_steps/columns.html.erb
+++ b/app/views/management/widget_steps/columns.html.erb
@@ -10,7 +10,7 @@
 <% end %>
 
 <%= render partial: 'shared/navigation_header', \
-  locals: {form_steps: form_steps, id: @widget.id, current_step: step, step_names: steps} %>
+  locals: {form_steps: wizard_steps, id: @widget.id, current_step: step, step_names: @steps_names} %>
 
 <%= form_for @widget, url: wizard_path, method: :put do |f| %>
   <div class="l-page-creation -columns">
@@ -19,11 +19,9 @@
         <% @fields.each do |field|%>
           <div class="card -single-data">
             <label for="column-<%= field[:name] %>"><%= field[:name] %></label>
-            <%= check_box_tag "site_page[dataset_setting][visible_fields][]",
-                              field[:name], @dataset_setting.get_columns_visible.include?(field[:name]),
-                              id: 'column-' + field[:name],
-                              disabled: @dataset_setting.get_columns_changeable.include?(field[:name]) ||
-                                  @dataset_setting.get_legend_hash.map {|k, v| v if %w[lat long country region].include?(k)}.include?(field[:name])%>
+            <%= check_box_tag "widget[visible_fields][]",
+                              field[:name], @widget.get_columns_visible.include?(field[:name]),
+                              id: 'column-' + field[:name] %>
             <div class="content">
               <h3><%= field[:name] %></h3>
             </div>
@@ -34,6 +32,6 @@
   </div>
   <%= render partial: 'management/steps_shared/footer', locals: {f: f} %>
 <% end %>
-<%= render partial: 'shared/errors', locals: { resource: @page } %>
+<%= render partial: 'shared/errors', locals: { resource: @widget } %>
 
 <%= console if Rails.env.development? %>
