--- a/app/views/management/widget_steps/preview.html.erb
+++ b/app/views/management/widget_steps/preview.html.erb
@@ -1,12 +1,11 @@
 
 
 <%= render partial: 'shared/navigation_header', \
-  locals: {form_steps: form_steps, id: @page.id, current_step: step, step_names: @steps_names, \
-  invalid_steps: @invalid_steps, invalid_state: @page.errors.any?} %>
+  locals: {form_steps: wizard_steps, id: @widget.id, current_step: step, step_names: @steps_names} %>
 
-<%= form_for @page, url: wizard_path, method: :put do |f| %>
+<%= form_for @widget, url: wizard_path, method: :put do |f| %>
   <%= render partial: 'management/steps_shared/footer', locals: {f: f} %>
 <% end %>
-<%= render partial: 'shared/errors', locals: { resource: @page } %>
+<%= render partial: 'shared/errors', locals: { resource: @widget } %>
 
 <%= console if Rails.env.development? %>
