Styles the Title, Dataset and Filters steps

--- a/app/assets/javascripts/templates/management/dataset-filters.hbs
+++ b/app/assets/javascripts/templates/management/dataset-filters.hbs
@@ -1,4 +1,4 @@
-<div class="c-dashboard-filters">
+<div class="c-dataset-filters">
   <input type="hidden" id="site_page_dataset_setting_filters" name="site_page[dataset_setting][filters]" value="{{json}}">
 
   {{#each filters}}
