--- a/app/assets/stylesheets/components/management/c-inputs-container.scss
+++ b/app/assets/stylesheets/components/management/c-inputs-container.scss
@@ -9,7 +9,16 @@
     border-left: 1px solid;
     border-color: $color-7;
 
-    &:last-of-type { border-bottom: 1px solid $color-7; }
+    &:first-of-type {
+      border-top-left-radius: 4px;
+      border-top-right-radius: 4px;
+    }
+
+    &:last-of-type {
+      border-bottom: 1px solid $color-7;
+      border-bottom-left-radius: 4px;
+      border-bottom-right-radius: 4px;
+    }
 
     label {
       display: block;
