--- a/app/assets/stylesheets/components/shared/c-checkbox.scss
+++ b/app/assets/stylesheets/components/shared/c-checkbox.scss
@@ -1,41 +1,27 @@
 .c-checkbox {
-  padding-top: 15px;
-
   label {
     display: inline-block;
     position: relative;
-    padding: 20px 20px 20px 70px;
-    transition: color .3s;
-    border: 1px solid rgba($color-4, .3);
-    color: rgba($color-4, .5);
-    font-weight: $font-weight-bold;
-    text-transform: uppercase;
-    box-shadow: 0 2px 3px 0 rgba($color-4, .1);
+    padding-left: 40px;
     cursor: pointer;
 
-    &:hover {
-      color: $color-4;
-    }
-
-    &::before {
-      position: absolute;
-      top: 50%;
-      left: 26px;
-      width: 30px;
-      height: 4px;
-      transform: translateY(calc(-2px - 50%)) rotate(-40deg);
-      background-color: $color-1;
-    }
-
+    &::before,
     &::after {
       position: absolute;
       top: 50%;
-      left: 26px;
-      width: 20px;
-      height: 4px;
-      transform: translateY(-50%);
-      background-color: rgba($color-4, .3);
+      left: 0;
+      width: 25px;
+      height: 25px;
+      transform: translateY(- 50%);
+      border: 1px solid $color-7;
+      border-radius: 4px;
       content: '';
+    }
+
+    &::after {
+      border: 0;
+      background: asset-url('icons/check-icon.svg') no-repeat center center;
+      content: none;
     }
   }
 
@@ -46,24 +32,10 @@
     left: -100000px; // Can't change the top property otherwise the browser scrolls when the user clicks the label
     opacity: 0;
 
-    &:focus {
-      + label {
-        border-color: $color-1;
-      }
-    }
-
     &:checked {
       + label {
-        color: $color-4;
-
-        &::before {
-          content: '';
-        }
-
         &::after {
-          width: 12px;
-          transform: translate(-6px, -50%) rotate(50deg);
-          background-color: $color-1;
+          content: '';
         }
       }
     }
