--- a/app/views/admin/user_steps/contexts.html.erb
+++ b/app/views/admin/user_steps/contexts.html.erb
@@ -4,8 +4,8 @@
 <%= form_for @user, url: wizard_path, method: :put do |f| %>
   <div class="l-user-creation -context">
     <div class="wrapper">
-      <h1>User name</h1>
-      <p class="intro">Please choose a name for the user and an email.</p>
+      <h1>Contexts</h1>
+      <p class="intro">Please select the contexts of the user.</p>
 
       <div class="c-context-list">
         <% ::Context.all.each do |context| %>
