--- a/app/views/management/page_steps/dataset.html.erb
+++ b/app/views/management/page_steps/dataset.html.erb
@@ -8,7 +8,7 @@
       <div class="description">
         <h1>Register a Dataset</h1>
         <p>You can also create a new dataset.</p>
-        <a href="" class="c-button -outline js-register-dataset">Register</a>
+        <%= link_to 'Register', new_management_site_dataset_step_path(@site.slug), class: 'c-button -outline js-register-dataset' %>
       </div>
     </div>
   </div>
