Added routes for the fake websites. Finished the validations for user creation

--- a/app/views/admin/user_steps/contexts.html.erb
+++ b/app/views/admin/user_steps/contexts.html.erb
@@ -11,7 +11,7 @@
         <% ::Context.all.each do |context| %>
           <div class="context">
             <label for="context-<%= context.id %>"><%= context.name %></label>
-            <%= check_box_tag "context[user_ids][]", context.id, f.object.contexts.include?(context), id: ('context-' + context.id.to_s) %>
+            <%= check_box_tag "user[context_ids][]", context.id, f.object.contexts.include?(context), id: ('context-' + context.id.to_s) %>
             <div class="content">
               <h3><%= context.name %></h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
