Improves the tree structure coherence
1/ When a page is disabled, the subpages aren't disabled anymore (less DB queries)
2/ When a page is disabled, the subpages are greyed out to show they are hidden but their eye icon isn't dashed to show they are not disabled

--- a/app/assets/javascripts/templates/management/tree-structure.hbs
+++ b/app/assets/javascripts/templates/management/tree-structure.hbs
@@ -17,9 +17,13 @@
           {{/if_eq}}
         {{/each}}
       >
-        {{> pageTemplate}}
+        {{> pageTemplate visible=../visible}}
         {{#if children}}
-          {{> item pages=children firstCall=false hasAdditionalPage=../hasAdditionalPage}}
+          {{#unless ../visible}}
+            {{> item pages=children visible=false firstCall=false hasAdditionalPage=../hasAdditionalPage}}
+          {{else}}
+            {{> item pages=children visible=enabled firstCall=false hasAdditionalPage=../hasAdditionalPage}}
+          {{/unless}}
         {{/if}}
       </li>
     {{/each}}
@@ -34,5 +38,5 @@
 {{/inline}}
 
 <div class="c-tree-structure {{#if readOnly}}-readonly{{/if}}">
-  {{> item pages=pages firstCall=true hasAdditionalPage=hasAdditionalPage}}
+  {{> item pages=pages firstCall=true visible=true hasAdditionalPage=hasAdditionalPage}}
 </div>
