Improves the name of the variable filter on the dashboard creation flow
This is related to #104.

--- a/app/assets/stylesheets/components/management/c-dashboard-filters.scss
+++ b/app/assets/stylesheets/components/management/c-dashboard-filters.scss
@@ -17,6 +17,7 @@
       flex-shrink: 0;
       min-height: 40px;
       margin: 0 9px;
+      overflow: hidden;
     }
 
     .values-selector + .select2 {
