--- a/app/views/static_page/no_permissions.html.erb
+++ b/app/views/static_page/no_permissions.html.erb
@@ -1,2 +1,14 @@
-<h1>You do not have permissions to view this page</h1>
-<%= console %>
+<% content_for :extended_header do %>
+  <div class="c-extended-header">
+    <div class="wrapper">
+      <div class="description">
+        <h1>Access restricted</h1>
+        <p>You don't have the permission to access this section</p>
+      </div>
+    </div>
+  </div>
+<% end %>
+
+<div class="wrapper">
+  <p>Please contact an admin if you think you should be granted access</p>
+</div>
