--- a/app/assets/stylesheets/components/admin/c-users-list.scss
+++ b/app/assets/stylesheets/components/admin/c-users-list.scss
@@ -1,16 +1,11 @@
-.c-users-list,
-.c-role-list,
-.c-site-list,
-.c-context-list {
+.c-users-list {
   display: flex;
   position: relative;
   flex-wrap: wrap;
   align-items: stretch;
+  justify-content: space-between;
 
-  .user,
-  .role,
-  .site,
-  .context {
+  .user {
     position: relative;
     flex-basis: calc(33.33% - 20px);
     margin: 10px;
@@ -53,12 +48,4 @@
       }
     }
   }
-}
-
-.c-user-list {
-  justify-content: space-between;
-}
-
-.c-role-list {
-  justify-content: center;
 }
