--- a/app/assets/stylesheets/layouts/admin/l-user-creation.scss
+++ b/app/assets/stylesheets/layouts/admin/l-user-creation.scss
@@ -1,117 +1,26 @@
 .l-user-creation {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: calc(100vh - 103px);
-  padding: 40px 0 103px;
+  // We make sure the fixed c-action-bar doesn't cover the content if the
+  // screen has a small height
+  padding-bottom: 75px;
 
-  h1 {
-    margin: 0 0 12px;
-    font-size: $font-size-big;
-    font-weight: $font-weight-light;
-    text-align: center;
-    text-transform: uppercase;
-  }
-
-  hr {
-    margin: 30px 0;
-    border: 0;
-    border-bottom: 1px solid $color-7;
-  }
-
-  .invisible-buttons {
-    display: none;
-  }
-
-  .intro {
-    max-width: 520px;
-    margin: 0 auto 40px;
-    font-size: $font-size-x-normal;
-    font-weight: $font-weight-light;
-    line-height: 1.3;
-    text-align: center;
-  }
 
   &.-name {
-    form {
-      max-width: 570px;
-      margin: 0 auto;
-    }
-
-    .user-name {
-      position: relative;
-      width: 100%;
-
-      label {
-        position: absolute;
-        left: -10000px; // Keep it for accessibility
-      }
-
-      input {
-        width: 100%;
-        height: 150px;
-        padding: 0 20px;
-        border: 1px solid $color-7;
-        font-size: $font-size-big;
-        font-weight: $font-weight-light;
-        line-height: 150px;
-        text-align: center;
-      }
-    }
-
-    .user-email {
-      position: relative;
-      width: 100%;
-
-      label {
-        position: absolute;
-        left: -10000px; // Keep it for accessibility
-      }
-
-      input {
-        width: 100%;
-        height: 50px;
-        padding: 0 20px;
-        border: 1px solid $color-7;
-        border-top: 0;
-        color: $color-5;
-        font-size: 14px;
-        letter-spacing: .1px;
-        line-height: 50px;
-        text-align: center;
-        text-transform: uppercase;
-      }
-    }
-  }
-
-  &.-sites {
-    padding-bottom: 100px;
-
-    .c-centered-input {
-      justify-content: space-between;
-      width: 400px;
-      margin: 0 auto 30px;
-    }
-  }
-
-  &.-context {
     display: flex;
     align-items: center;
     min-height: calc(100vh - 300px);
     padding-top: 50px;
-    padding-bottom: 100px;
 
     > .wrapper {
       display: flex;
       flex-direction: column;
       align-items: center;
-      text-align: center;
-
-      .c-button {
-        width: 200px;
-        margin-bottom: 20px;
-      }
     }
+  }
+
+  &.-role,
+  &.-sites,
+  &.-contexts {
+    padding-top: 50px;
   }
 
 }
