--- a/app/views/admin/user_steps/sites.html.erb
+++ b/app/views/admin/user_steps/sites.html.erb
@@ -1,15 +1,23 @@
+<% content_for :extended_header do %>
+  <div class="c-extended-header">
+    <div class="wrapper">
+      <div class="description">
+        <h1>User sites</h1>
+        <p>Please choose which sites the user will manage</p>
+      </div>
+    </div>
+  </div>
+<% end %>
+
 <%= render partial: 'shared/navigation_header', locals: {form_steps: wizard_steps, id: @user.id, current_step: step, step_names: @steps_names} %>
 <%= Gon::Base.render_data(camel_case: true, camel_depth: 3) %>
 
 <%= form_for @user, url: wizard_path, method: :put do |f| %>
   <div class="l-user-creation -sites">
     <div class="wrapper">
-      <h1>User sites</h1>
-      <p class="intro">Please choose a sites for the user.</p>
-
-      <div class="c-site-list">
+      <div class="c-cards-list">
         <% Site.all.each do |site| %>
-          <div class="site">
+          <div class="card">
             <label for="site-<%= site.id %>"><%= site.name %></label>
             <%= check_box_tag "user[site_ids][]", site.id, f.object.sites.include?(site), id: ('site-' + site.id.to_s) %>
             <div class="content">
@@ -19,8 +27,6 @@
           </div>
         <% end %>
       </div>
-
-      <div class="js-identity"></div>
 
     </div>
   </div>
