Improves the accessibility of the checkbox component
We're doing so by making a visual change to it when it's focused (the border's color).

--- a/app/assets/stylesheets/components/shared/c-checkbox.scss
+++ b/app/assets/stylesheets/components/shared/c-checkbox.scss
@@ -32,6 +32,14 @@
     left: -100000px; // Can't change the top property otherwise the browser scrolls when the user clicks the label
     opacity: 0;
 
+    &:focus {
+      + label {
+        &::before {
+          border-color: $color-1;
+        }
+      }
+    }
+
     &:checked {
       + label {
         &::after {
