--- a/app/assets/stylesheets/components/admin/c-urls-input.scss
+++ b/app/assets/stylesheets/components/admin/c-urls-input.scss
@@ -1,27 +1,6 @@
 .c-urls-input {
-  width: 100%;
-
-  > div {
+  > .container {
     position: relative;
-  }
-
-  label {
-    position: absolute;
-    left: -10000px;
-  }
-
-  input {
-    width: 100%;
-    height: 50px;
-    padding: 0 20px;
-    border: 1px solid $color-7;
-    border-top: 0;
-    color: $color-4;
-    font-size: $font-size-normal;
-    letter-spacing: .1px;
-    line-height: 50px;
-    text-align: center;
-    text-transform: uppercase;
   }
 
   .remove-url {
@@ -35,12 +14,15 @@
     background: asset-url('icons/close-icon.svg') no-repeat center center;
     text-indent: -10000px; // For accessibility, we should keep the text
     cursor: pointer;
+
+    &:focus {
+      outline: solid 2px $color-1;
+    }
   }
 
   .add-url {
     width: 100%;
     height: 45px;
-    margin-top: 8px;
     border: 2px dashed $color-7;
     border-radius: 7px;
     background: transparent;
@@ -48,6 +30,11 @@
     font-family: $font-family-1;
     font-size: $font-size-normal;
     letter-spacing: .1px;
+    text-transform: uppercase;
     cursor: pointer;
+
+    &:focus {
+      border-color: $color-1;
+    }
   }
 }
