Improves the style of the step "users"
* Uses the standard inputs-container component
* Deletes the users-list component
* Improves the accessibility of the cards-list component

--- a/app/assets/stylesheets/components/shared/c-cards-list.scss
+++ b/app/assets/stylesheets/components/shared/c-cards-list.scss
@@ -21,6 +21,10 @@
         background: $color-1;
         color: $color-3;
       }
+
+      &:focus +.content {
+        border-color: $color-1;
+      }
     }
 
     label {
