--- a/app/assets/stylesheets/layouts/admin/l-site-creation.scss
+++ b/app/assets/stylesheets/layouts/admin/l-site-creation.scss
@@ -1,17 +1,7 @@
 .l-site-creation {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: calc(100vh - 103px);
-  padding: 40px 0 103px;
-
-  h1 {
-    margin: 0 0 12px;
-    font-size: $font-size-big;
-    font-weight: $font-weight-light;
-    text-align: center;
-    text-transform: uppercase;
-  }
+  // We make sure the fixed c-action-bar doesn't cover the content if the
+  // screen has a small height
+  padding-bottom: 75px;
 
   hr {
     margin: 30px 0;
@@ -19,48 +9,28 @@
     border-bottom: 1px solid $color-7;
   }
 
-  .invisible-buttons {
-    display: none;
-  }
-
-  .intro {
-    max-width: 520px;
-    margin: 0 auto 40px;
-    font-size: $font-size-x-normal;
-    font-weight: $font-weight-light;
-    line-height: 1.3;
-    text-align: center;
-  }
-
   &.-name {
-    form {
-      max-width: 570px;
-      margin: 0 auto;
+    display: flex;
+    align-items: center;
+    min-height: calc(100vh - 300px);
+    padding-top: 50px;
+
+    > .wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
+  }
 
-    .site-name {
-      position: relative;
-      width: 100%;
-
-      label {
-        position: absolute;
-        left: -10000px; // Keep it for accessibility
-      }
-
-      input {
-        width: 100%;
-        height: 150px;
-        padding: 0 20px;
-        border: 1px solid $color-7;
-        font-size: $font-size-big;
-        font-weight: $font-weight-light;
-        line-height: 150px;
-        text-align: center;
-      }
-    }
+  &.-users {
+    padding-top: 50px;
   }
 
   &.-style {
+    display: flex;
+    align-items: center;
+    min-height: calc(100vh - 300px);
+    padding-top: 50px;
 
     .templates {
       display: flex;
@@ -77,6 +47,10 @@
 
           &:not(:checked) + .content {
             opacity: .3;
+          }
+
+          &:focus + .content img{
+            border-color: $color-1;
           }
         }
 
@@ -115,6 +89,11 @@
   }
 
   &.-settings {
+    display: flex;
+    align-items: center;
+    min-height: calc(100vh - 300px);
+    padding-top: 50px;
+
     .c-centered-input {
       justify-content: space-between;
       width: 400px;
