--- a/app/views/management/page_steps/title.html.erb
+++ b/app/views/management/page_steps/title.html.erb
@@ -19,14 +19,14 @@
       <div class="c-inputs-container">
         <div class="container -big">
           <%= f.label :name, 'Page title' %>
-          <%= f.text_field :name, placeholder: 'My page' %>
+          <%= f.text_field :name, placeholder: 'My page', 'data-parsley-required': true %>
         </div>
         <div class="container">
           <%= f.label :description %>
-          <%= f.text_area :description, placeholder: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.' %>
+          <%= f.text_area :description, placeholder: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.', 'data-parsley-required': true %>
         </div>
         <div class="container">
-          <%= f.label :uri %>
+          <%= f.label :uri, 'data-parsley-required': true %>
           <%= f.text_field :uri, placeholder: 'my-page' %>
         </div>
         <footer>
