--- a/app/assets/stylesheets/components/management/c-wysiwyg.scss
+++ b/app/assets/stylesheets/components/management/c-wysiwyg.scss
@@ -20,6 +20,24 @@
 
       .ql-formats {
         margin: 0;
+
+        button {
+          width: 34px !important;
+          margin: 0;
+          padding: 0 !important;
+          border-left: 1px solid $color-4;
+          text-align: center;
+
+          &.ql-active svg path {
+            fill: $color-1;
+          }
+
+          svg {
+            display: inline-block;
+            float: none;
+            stroke: none !important;
+          }
+        }
       }
     }
 
