Fixes styles conflicts with the mobile header
The styles of the client's map would interfere with ours.

--- a/app/assets/stylesheets/components/front/c-header.scss
+++ b/app/assets/stylesheets/components/front/c-header.scss
@@ -23,6 +23,19 @@
     align-items: flex-start;
     justify-content: space-between;
     height: 50px;
+    // The padding is the same as the one of the wrapper but needs
+    // to be repeated as the styles included with the standalone map
+    // interferes
+    padding: 0 $wrapper-mobile-padding;
+    overflow: visible;
+
+    @media #{$mq-mobile} {
+      padding: 0 $wrapper-tablet-padding;
+    }
+
+    @media #{$mq-tablet} {
+      padding: 0 $wrapper-padding;
+    }
 
     @if $theme == 2 {
       background-color: $color-7;
