--- a/app/views/admin/site_steps/settings.html.erb
+++ b/app/views/admin/site_steps/settings.html.erb
@@ -24,15 +24,12 @@
           <%= settings_form.hidden_field :name, value: 'logo_image'%>
           <% if !@logo_image.nil? && @logo_image.image_file_name %>
             <div class="c-centered-input">
-              <label>Current logo</label>
-              <div>
-                <%= image_tag @logo_image.image.url %>
-              </div>
+              <label>Logo preview</label>
+              <%= image_tag @logo_image.image.url %>
             </div>
           <% end %>
           <div class="c-centered-input">
-            <% label_value = !@logo_image.nil? && @logo_image.image_file_name ? 'Change logo image' : 'Logo image' %>
-            <%= settings_form.label :image, value: label_value, for: 'logo' %>
+            <%= settings_form.label :image, value: 'Logo image', for: 'logo' %>
             <div class="js-file-input">
               <%= settings_form.file_field :image, id: 'logo', accept: 'image/*' %>
             </div>
