Adds the logic to render widgets previews

--- a/app/assets/javascripts/templates/management/widgets-modal.hbs
+++ b/app/assets/javascripts/templates/management/widgets-modal.hbs
@@ -6,7 +6,7 @@
       <label for="widget-1"></label>
       <input type="radio" id="widget-1" name="widget" value="1" />
       <div class="content">
-        <div class="graph"></div>
+        <div class="graph js-chart" data-id="1"></div>
         <h3>Widget 1 name</h3>
         <p>Widget's description that can be up to several lines long</p>
       </div>
@@ -15,7 +15,7 @@
       <label for="widget-2"></label>
       <input type="radio" id="widget-2" name="widget" value="2" />
       <div class="content">
-        <div class="graph"></div>
+        <div class="graph js-chart" data-id="2"></div>
         <h3>Widget 2 name</h3>
         <p>Widget's description that can be up to several lines long</p>
       </div>
@@ -24,7 +24,7 @@
       <label for="widget-3"></label>
       <input type="radio" id="widget-3" name="widget" value="3" />
       <div class="content">
-        <div class="graph"></div>
+        <div class="graph js-chart" data-id="3"></div>
         <h3>Widget 3 name</h3>
         <p>Widget's description that can be up to several lines long</p>
       </div>
@@ -33,7 +33,7 @@
       <label for="widget-4"></label>
       <input type="radio" id="widget-4" name="widget" value="4" />
       <div class="content">
-        <div class="graph"></div>
+        <div class="graph js-chart" data-id="4"></div>
         <h3>Widget 4 name</h3>
         <p>Widget's description that can be up to several lines long</p>
       </div>
