--- a/app/assets/stylesheets/components/management/c-widgets-modal.scss
+++ b/app/assets/stylesheets/components/management/c-widgets-modal.scss
@@ -36,7 +36,7 @@
         width: 100%;
         height: 100%;
         cursor: pointer;
-        z-index: 1;
+        z-index: 2;
       }
 
       input {
@@ -66,6 +66,7 @@
         position: relative;
         width: 100%;
         height: 160px;
+        padding: 10px;
         border: 1px solid $color-7;
         border-radius: 4px;
 
@@ -80,6 +81,11 @@
           background: asset-url('icons/large-check-icon.svg') no-repeat center center, rgba($color-1, .8);
           content: '';
           opacity: 0;
+          z-index: 1;
+        }
+
+        > .c-chart-widget {
+          width: 100%;
         }
       }
     }
