--- a/app/views/layouts/management.html.erb
+++ b/app/views/layouts/management.html.erb
@@ -5,8 +5,11 @@
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="//cdn.quilljs.com/1.1.9/quill.bubble.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.22.2/codemirror.min.css">
   <%= stylesheet_link_tag 'management/application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <script src="//cdn.quilljs.com/1.1.9/quill.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.22.2/codemirror.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.22.2/mode/javascript/javascript.min.js"></script>
   <%= javascript_include_tag 'management', 'data-turbolinks-track': 'reload' %>
   <%= favicon_link_tag %>
 </head>
