--- a/app/views/management/page_steps/map.html.erb
+++ b/app/views/management/page_steps/map.html.erb
@@ -1,5 +1,5 @@
 <% content_for :extended_header do %>
-    <div class="c-extended-header -high">
+    <div class="c-extended-header">
       <div class="wrapper">
         <div class="description">
           <h1>Map</h1>
@@ -13,26 +13,16 @@
 <%= render partial: 'shared/navigation_header', locals: \
   {form_steps: form_steps, id: @page.id, current_step: step, step_names: @steps_names, \
   invalid_steps: @invalid_steps, invalid_state: @page.errors.any?} %>
-<%= render partial: 'shared/errors', locals: { resource: @page } %>
 
 <%= form_for(@page, url: wizard_path, method: :put, :html => {:class => 'js-form'}) do |f| %>
   <div class="l-page-creation -map">
     <div class="wrapper">
-        <% if @page.errors.any? %>
-            <div id="error_explanation">
-              <h2><%= pluralize(@page.errors.count, "error") %> prohibited this site_page from being saved:</h2>
-              <ul>
-                <% @page.errors.full_messages.each do |message| %>
-                    <li><%= message %></li>
-                <% end %>
-              </ul>
-            </div>
-        <% end %>
-
-        <div class="c-fieldset">
+        <div class="c-inputs-container -large">
           <%= f.fields_for :content, OpenStruct.new(@page.content) do |ff| %>
-              <%= ff.text_area :settings, class: 'settings' %>
-              <%= ff.label 'Map settings', class: 'col-sm-2 form-control-label' %>
+            <div class="container">
+              <%= ff.label :settings, 'Map settings' %>
+              <%= ff.text_area :settings, class: 'js-editor' %>
+            </div>
           <% end %>
         </div>
     </div>
